tdf#103403: Wrong glyph advances with Graphite

Always create HarfBuzz font at the UPEM size and scale HarfBuzz output
with the desired size instead. This theoretically means we loss any
size-specific adjustments in the font but in practice very few fonts do
this and in general modern APIs prefer stable glyph positioning across
font sizes.

Change-Id: Idf396eec5e241cc5fb9d0db698f2c081b7de29e3